Lua script calling Ethernet dissector runs OK in 1.12.4 but crashes in later releases
This issue was migrated from bug 14293 in our old bug tracker.
Original bug information:
Reporter: rendong Yang
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: 2.4.3
Attachments:
dptun.zip: three captured file and one dptun.lua script file
arp1.pcap: Sorry forget the packet pcap file
See also: Issue #12826 (closed)