eth: fix null pointer dereference when called from Lua

At the moment, Lua dissectors always pass a NULL data parameter, so
dissectors like eth should gracefully handle that.

Bug: 14293
Change-Id: Ida4d0530a9c417db5960475274315d4acc3704a8
Fixes: v2.1.0rc0-1575-g8ec153f938 ("Have the "maybe an FCS" version of the Ethernet dissector take a data argument.")
Reviewed-on: https://code.wireshark.org/review/26431
Petri-Dish: Peter Wu <peter@lekensteyn.nl>
Tested-by: Petri Dish Buildbot
Reviewed-by: Guy Harris <guy@alum.mit.edu>
(cherry picked from commit ba179a7ef7e660d788cbaade65982ffc7249b91f)
Reviewed-on: https://code.wireshark.org/review/26435